# platform-core

./: .gitignore  .pnp.cjs  LICENSE  README.md  a.md  package-lock.json  package.json  tsconfig.build.json
common/: README.md
mobileapp/: README.md
python/: pyproject.toml
python/process_media/: __init__.py  download_media.py  process_audio.py  requirements.txt
services/: README.md
src/: index.ts
webapp/: README.md
