[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-core"
version = "0.1.0"
description = "Shared utilities for MultipliedAI (Python)."
requires-python = ">=3.9"

dependencies = [
  "anyio",
  "pydub",
  "openai",
  "aiofiles",
  "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["process_media*"]

